<resources>
    <string name="app_name">StudySimplifier</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>


    <string name="menu_share">Share schedule</string>

    <string name="hw_close_button">Close</string>
    <string name="commit_changes_hw">Commit</string>
    <string name="delete_task_hw">Delete</string>
    <string name="completed_checkbox_hw">Completed</string>
    <string name="edit_schedule">Edit schedule</string>
    <string name="show_schedule">Show schedule</string>
    <string name="share_schedule">Share schedule</string>
    <string name="dispose_edit">Dispose</string>
    <string name="commit_edit">Commit</string>
    <string name="day_of_week_edit">Day</string>
    <string name="time_edit">Time</string>
    <string name="classroom_edit">Classroom</string>
    <string name="teacher_edit">Teacher</string>
    <string name="lesson_edit">Lesson</string>
    <string name="edit_style">Edit style</string>
    <string name="schedule">Schedule</string>
    <string name="appearance">Appearance</string>
    <string name="help">Help</string>
    <string name="settings">Settings</string>

    <string name="stitch_client_app_id">studysimplifierapp-tddlc</string>
    <string name="fill_forms">Fill in all forms</string>
    <string name="succesfully_sent_email">Succesfully sent confirmation email</string>
    <string name="error_registering">error registering new user</string>
    <string name="succesfully_sent_reset_email">Succesfully sent password reset email</string>
    <string name="error_sending_reset_email">Error sending password reset email:</string>
    <string name="fill_e_or_u_and_pass">Fill in either email or username forms and password</string>
    <string name="exception_w_authorization">Exception with authorization</string>
    <string name="unable_login">Unable to log in:</string>
    <string name="mon">Monday</string>
    <string name="tue">Tuesday</string>
    <string name="wen">Wednesday</string>
    <string name="thu">Thursday</string>
    <string name="fri">Friday</string>
    <string name="sat">Saturday</string>
    <string name="sun">Sunday</string>
    <string name="prefName">MyPreferences</string>
    <string name="welcome_msg">Welcome user</string>
    <string name="exc">EXCEPTION:</string>
    <string name="give_username">Give your username</string>
    <string name="already_friends">Already befriended this user</string>
    <string name="succesfully_befriended">Successfully befriended</string>
    <string name="username_updated">User name was updated</string>
    <string name="username_added">User name was added</string>
    <string name="lesson_begins_soon">Begins soon:</string>
    <string name="schedule_added">New schedule has been added</string>
    <string name="do_name_schedule">Please name your schedule</string>
    <string name="add_username_first">Add your username first to upload schedule</string>
    <string name="schedule_changed">Schedule changed</string>
    <string name="only_insert">Only insert</string>
    <string name="lessons_inserted">Lessons inserted</string>
    <string name="insert_n_delete">Insert and delete previous</string>
    <string name="cancel">Cancel</string>
    <string name="set_schedule_mesage">You want be able to restore your previous schedule unless you saved it. Confirm?</string>
    <string name="set_schedule_title">Confirmation</string>
    <string name="schedule_already_used">You already use this schedule</string>
    <string name="my_schedule">Mine:</string>
    <string name="my_current_schedule">My current schedule</string>
    <string name="task_created_when">Task created:</string>
    <string name="task_deadline_when">Task deadline:</string>
    <string name="my_hw">My homework</string>
    <string name="shared_hw">Shared homework</string>
    <string name="stop_recording">STOP RECORDING</string>
    <string name="play_record">Play record</string>
    <string name="stop_record">Stop record</string>
    <string name="recording">RECORDING...</string>
    <string name="playing">PLAYING...</string>

    <string name="task_updated">Lesson task updated</string>
    <string name="lesson_status_updated">Particular lesson status is updated</string>
    <string name="lesson_task_updated">Particular lesson task is updated</string>
    <string name="confirmation">Confirmation</string>
    <string name="delete_confirmation_message">Do you really want to delete all this lesson task?</string>
    <string name="incorrect_day_of_week">Incorrect day of week</string>
    <string name="new_task_hint">Enter your task here</string>
    <string name="add_task_before_commit">Add new task to commit</string>
    <string name="task_inserted">New task inserted</string>
    <string name="drawer_text">Organize your schedule</string>
    <string name="sign_in">Sign in</string>
    <string name="log_in">Log in</string>
    <string name="log_in_anonymously">Log in anonymously</string>
    <string name="reset_password">Reset password</string>
    <string name="enter_your_username">Enter your username:</string>
    <string name="enter_your_email">Enter your email:</string>
    <string name="enter_your_password">Enter your password:</string>
    <string name="confirm">Confirm</string>
    <string name="record">RECORD</string>
    <string name="add_image">Add image</string>
    <string name="share_with_friends">Share with friends</string>
    <string name="name_your_schedule">Name your schedule:</string>
    <string name="schedule_name">schedule name</string>
    <string name="choose_friends_to_share_with">Choose friends to share with:</string>
    <string name="upload_my_schedule">Upload my schedule</string>
    <string name="get_schedule_from_your_friends">Get schedule from your friends:</string>
    <string name="get_schedule">get schedule</string>
    <string name="change_username">Change username:</string>
    <string name="new_username">new username</string>
    <string name="update">Update</string>
    <string name="find_friends_by_username">Find friends by username:</string>
    <string name="friend_s_username">friend`s username</string>
    <string name="find_friend">Find friend</string>
    <string name="log_out">Log out</string>
    <string name="add_new_lesson">Add new lesson</string>
    <string name="dark_text">Dark text</string>
    <string name="light_text">Light text</string>
    <string name="alarm_summary">Disable/enable notifications</string>
    <string name="alarm_title">Notifications</string>
    <string name="profile">Profile</string>
    <string name="lesson">Lesson:</string>
    <string name="professor">,\nProfessor:</string>
    <string name="classroom">,\nClassRoom:</string>
    <string name="time">,\nTime:</string>
    <string name="your_profile">Your profile</string>
    <string name="lessons_list">Lessons of this schedule:</string>
    <string name="date">Date:</string>
    <string name="no_permission_for_audio">Dont have permission to record audio</string>
    <string name="apply_this_style">Apply this style</string>

    <string name="show_page_when_click_on_lesson">Show page, when click on lesson</string>
    <string name="dispose_changes_for_new_task_or_delete_old_task">Dispose changes for new task or delete old task</string>
    <string name="start_recording_new_audio">Start recording new audio</string>
    <string name="stop_recording_audio">Stop recording audio</string>
    <string name="add_image_to_task">Add image to task</string>
    <string name="share_task_with_friends_who_have_lesson_with_the_same_name">Share task with friends who have lesson with the same name</string>
    <string name="commit_changes">Commit changes</string>
    <string name="show_schedule_of_week_when_there_is_date">Show schedule of week when there is date</string>
    <string name="_01_01_01">01/01/01</string>
    <string name="select_one_of_3_possible_theme_options">Select one of 3 possible theme options</string>
    <string name="add_friend_by_username">Add friend by username</string>
    <string name="help_update_username">Create or update username, so that you can have friends in this app and share tasks and schedules</string>
    <string name="help_upload_lessoms">Upload lessons you selected to server, give name to this new schedule first</string>
    <string name="help_choose_schedule">Choose one of schedules in list of available - first one is your current, others are friends` and yours uploaded Then choose lessons you want to download and press the button</string>
    <string name="delete_lesson">Delete lesson</string>
    <string name="wrong_format">Incorrect format</string>
    <string name="wrong_time">Incorrect time</string>
    <string name="lang">Language</string>
    <string name="choose_lang">Choose language</string>
    <string name="profile_error">Log in not anonymously to set extra information</string>

</resources>
